2012-07-09	Santiago Munin <burning1@gmail.com>
	* res/values-es/arrays.xml, 
	  res/values-es/strings.xml: Spanish language.
	* res/layout/add_operation.xml: UI changes.
	* res/layout/movements_overview.xml: Id changed.
	* res/values-es/arrays.xml,
	  res/values/arrays.xml: Added GBP currency.
	* res/values/strings.xml: Few changes.
	* src/es/udc/santiago/model/facade/CashFlow.java: Added clone() method.
	* src/es/udc/santiago/model/facade/CashFlowService.java: Fixed a bug which could show movements out of period.
	* src/es/udc/santiago/view/cashflows/AddOperationActivity.java: UI control changes.
	* src/es/udc/santiago/view/cashflows/OverviewActivity.java: Added GBP currency.
	* src/es/udc/santiago/view/cashflows/ViewAllMovementsActivity.java: Time is not longer shown in date fields (only date).

2012-07-08	Santiago Munin <burning1@gmail.com>
	* AndroidManifest.xml: Fixed a comment.
	* src/es/udc/santiago/model/facade/CashFlowService.java: Now the yearly movements filter returns monthly movements x 12 (one per month)
	* src/es/udc/santiago/view/cashflows/OverviewActivity.java: Fixed the currency select.
	* src/es/udc/santiago/view/utils/ViewUtils.java: Improved cash printing.

2012-07-08	Santiago Munin <burning1@gmail.com>
	* res/raw/ormlite_config.txt: Deleted (unnecessary file).
	* src/es/udc/santiago/model/facade/CashFlowService.java: Fixed #4 (wrong query).
	* src/es/udc/santiago/view/cashflows/OverviewActivity.java: Now the data is refreshed onResume.

2012-07-08	Santiago Munin <burning1@gmail.com>
	* .gitignore: res/ is no longer ignore (ignoring it was a mistake).
	* AndroidManifest.xml: Changed main activity and removed old activities.
	* lint.xml: Deleted.
	* res/drawable-mdpi/add_operation.png: Added new icon.
	* res/drawable-mdpi/euro_currency_sign.png: Added new icon.
	* res/drawable-mdpi/manage_categories.png: Added new icon.
	* res/layout/main.xml: Deleted.
	* src/es/udc/santiago/view/MainActivity.java: Deleted, this activity is no longer necessary.