@@ -1,3 +1,9 @@
+2012-07-11	Santiago Munin <burning1@gmail.com>
+	* src/es/udc/santiago/model/facade/CashFlow.java: Changed clone() method, now dates are cloned too.
+	* src/es/udc/santiago/model/facade/CashFlowService.java: getAllWithFilter() now clones the received date because it will change its value.
+	* src/es/udc/santiago/model/util/ModelUtilities.java: Fixed a null-pointer bug.
+	* test/es/udc/santiago/test/CashFlowServiceTest.java: Added new values and tests.
+
 2012-07-09	Santiago Munin <burning1@gmail.com>
 	* res/values-es/arrays.xml, 
 	  res/values-es/strings.xml: Spanish language.
